release streaming connections
