# pkg/swagger/grpc.swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "User API",
+    "title": "Chat API",
     "version": "1.0.0",
     "contact": {
       "name": "Timofey Podlinov",
@@ -87,6 +87,47 @@
         ]
       }
     },
+    "/chat/v1/chat-connect": {
+      "post": {
+        "operationId": "Chat_Connect",
+        "responses": {
+          "200": {
+            "description": "A successful response.(streaming responses)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "result": {
+                  "$ref": "#/definitions/chat_v1Message"
+                },
+                "error": {
+                  "$ref": "#/definitions/rpcStatus"
+                }
+              },
+              "title": "Stream result of chat_v1Message"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/chat_v1ConnectChatRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Chat"
+        ]
+      }
+    },
     "/chat/v1/send-message": {
       "post": {
         "operationId": "Chat_SendMessage",
@@ -122,6 +163,22 @@
     }
   },
   "definitions": {
+    "chat_v1ConnectChatRequest": {
+      "type": "object",
+      "properties": {
+        "chatId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "userId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "username": {
+          "type": "string"
+        }
+      }
+    },
     "chat_v1CreateRequest": {
       "type": "object",
       "properties": {
@@ -137,6 +194,25 @@
       "type": "object",
       "properties": {
         "id": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "chat_v1Message": {
+      "type": "object",
+      "properties": {
+        "from": {
+          "type": "string"
+        },
+        "text": {
+          "type": "string"
+        },
+        "timestamp": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "toChatId": {
           "type": "string",
           "format": "int64"
         }
